--- a/restsite/css/Restaurant.css
+++ b/restsite/css/Restaurant.css
@@ -31,6 +31,7 @@ p {
   border-width: 2px;
 	background-color: #E0E0F8;
 	margin: 8px;
+  font-size: 18px;
 }
 
 /* Устанавливаем стиль для заглавия колонок*/
